<resources>
    <string name="app_name">Instaprefs</string>
    <string name="pref_debug_title">Enable debug</string>
    <string name="pref_debug_description">Enables logging information</string>
    <string name="pref_debug">Debugging</string>
    <string name="pref_double_tap_like_title">Disable double tap to like</string>
    <string name="pref_suggested_follow_title">Hide suggested accounts to follow</string>
    <string name="pref_suggested_follow_description">WARNING: This feature is still experimental. Hides the list on top which show people you might want to follow</string>
    <string name="pref_ads_title">Hide ads</string>
    <string name="pref_title">General</string>
    <string name="pref_comments_title">Hide comments</string>
    <string name="pref_tags_title">Hide chosen hashtags</string>
    <string name="pref_manage_tags_title">Hashtag blacklist</string>
    <string name="hashtag">#</string>
    <string name="remove">Remove</string>
    <string name="tag_hint">Enter tag to ignore</string>
    <string name="add">Add</string>
    <string name="pref_hiding">Hiding</string>
    <string name="pref_tags_description">Hides posts with hashtags from hashtag blacklist</string>
</resources>
